--- a/analog.css
+++ b/analog.css
@@ -1,91 +1,156 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato&family=Playfair+Display&display=swap');
+
 @import url('https://fonts.googleapis.com/css2?family=Mooli&display=swap');
 
 body {
-    font-size: 90%;
-    font-family: "Courier New", Courier, monospace;
-    letter-spacing: 0.10em;
-    background: #B8E1FC;
-    background: radial-gradient(circle farthest-corner at center center, #B8E1FC 0%, #231421 83%);
+	font-size: 90%;
+	font-family: "Courier New", Courier, monospace;
+	letter-spacing: 0.10em;
+	background: #B8E1FC;
+	background: radial-gradient(circle farthest-corner at center center, #B8E1FC 0%, #231421 83%);
 }
-    #page {
-    max-width: 1140px;
-    min-width: 720px;
-    margin: 30px auto 10px auto;
-    padding: 20px;
-    border: 5px groove #000;
-    background-color: #c3bfc5;
-    height: 800px;
-}
-    #logo {
-    width: 120px;
-    margin: -190px 50px auto;
-}
-    #title{
-        font-family: 'Mooli', sans-serif;
-        margin: auto auto auto 300px;
-        font-size: 57px;
-        color: #232124;
-        background: linear-gradient(to right, #232124 25.4%, #dba14b 0%);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    }
-    
-    #extra{
-        font-size: 9.5px;
-        font-family: 'Mooli', sans-serif;
-        letter-spacing: 0.50em;
-        margin: -100px auto auto 309px;
-    }
 
-    ul {
-    width: 570px;
-    padding: 15px;
-    margin: 20px auto 0px auto;
-    border-top: 2px solid #000;
-    border-bottom: 1px solid #000;
-    text-align: center;
-    background-color: black;
+#page {
+	max-width: 1140px;
+	min-width: 720px;
+	margin: 70px auto 10px auto;
+	padding: 10px;
+	border: 5px groove #232124;
+	background-color: #c3bfc5;
+	height: 670px;
 }
-    li {
-    display: inline;
-    margin: 0px 2px;
- 
+
+#logo {
+	margin: -160px 250px auto;
+    
 }
-    p {
-    font-size: 25px;
-    text-align: center;
-    width: 600px; 
-    margin: 20px auto 20px auto; 
-    font-family: 'Playfair Display', serif;
-    font-weight: normal;
+
+#title {
+	font-family: 'Mooli', sans-serif;
+	margin: auto auto auto 470px;
+	font-size: 41px;
+	color: #232124;
+    
 }
-    a {
-    color: white;
-    font-family: 'Lato', sans-serif;
-    text-transform: uppercase;
-    text-decoration: none;
-    padding: 6px 18px 5px 18px;
+
+#extra {
+	font-size: 7px;
+	font-family: 'Mooli', sans-serif;
+	letter-spacing: 0.40em;
+	margin: -20px auto auto 476px;
 }
-    a:hover, a.on { 
-    color: #f3f3f3;
-    background-color: #757373;
+
+.glitch {
+	position: relative;
+	font-size: 79px;
+	font-weight: bold;
+	color: #FFFFFF;
+	letter-spacing: 3px;
+	z-index: 1;
+	font-family: 'Mooli', sans-serif;
+	margin: -150px auto auto 626px;
+}
+
+.glitch:before, .glitch:after {
+	display: block;
+	content: attr(data-text);
+	position: absolute;
+	top: 0;
+	left: 0;
+	opacity: 0.8;
+}
+
+.glitch:before {
+	animation: glitch-it 0.3s cubic-bezier(0.25, 0.46, 0.45, 0.94) both infinite;
+	color: #00FFFF;
+	z-index: -1;
+}
+
+.glitch:after {
+	animation: glitch-it 0.3s cubic-bezier(0.25, 0.46, 0.45, 0.94) reverse both infinite;
+	color: #FF00FF;
+	z-index: -2;
+}
+
+@keyframes glitch-it {
+	0% {
+		transform: translate(0);
+	}
+
+	20% {
+		transform: translate(-2px, 2px);
+	}
+
+	40% {
+		transform: translate(-2px, -2px);
+	}
+
+	60% {
+		transform: translate(2px, 2px);
+	}
+
+	80% {
+		transform: translate(2px, -2px);
+	}
+
+	to {
+		transform: translate(0);
+	}
+}
+
+ul {
+	width: 570px;
+	padding: 15px;
+	margin: 20px auto 0px auto;
+	border-top: 2px solid #000;
+	border-bottom: 1px solid #000;
+	text-align: center;
+	background-color: black;
+}
+
+li {
+	display: inline;
+	margin: 0px 2px;
+}
+
+p {
+	font-size: 25px;
+	text-align: center;
+	width: 600px;
+	margin: 20px auto 20px auto;
+	font-family: 'Playfair Display', serif;
+	font-weight: normal;
+}
+
+a {
+	color: white;
+	font-family: 'Lato', sans-serif;
+	text-transform: uppercase;
+	text-decoration: none;
+	padding: 17px 18px 17px 18px;
+}
+
+a:hover, a.on {
+	color: #f3f3f3;
+	background-color: #4e4c4c;
 }
 
 #bright img {
-    -webkit-filter: brightness(30%);
-    -webkit-transition: all 1s ease;
-    -moz-transition: all 1s ease;
-    -o-transition: all 1s ease;
-    -ms-transition: all 1s ease;
-    transition: all 1s ease;
-    margin: 10px 450px 25px 270px;
-    box-shadow: 3px 3px 6px 1px rgba(19, 0, 0, 1);
+	-webkit-filter: brightness(30%);
+	-webkit-transition: all 1s ease;
+	-moz-transition: all 1s ease;
+	-o-transition: all 1s ease;
+	-ms-transition: all 1s ease;
+	transition: all 1s ease;
+	margin: 10px 450px 25px 270px;
+	box-shadow: 3px 3px 6px 1px rgba(19, 0, 0, 1);
 }
-#bright img:hover{
-    -webkit-filter: brightness(100%);
+
+#bright img:hover {
+	-webkit-filter: brightness(100%);
 }
-#piano img{
-    max-width: 20%;
-    margin: -120px auto auto 920px;
+
+#piano img {
+	max-width: 20%;
+	margin: -120px auto auto 920px;
 }
